# sepilot-cli

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GRAPH.md  LICENSE  README.md  REPORT.md  SECURITY.md  build_protected.sh  install.sh  merge.sh  package-lock.json  package.json  pyproject.toml  sepilot_protected.spec
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release.yml
customize/: README.md  openai-integration.md
scripts/: download_tiktoken_data.py  pyi_rth_tiktoken.py
sepilot/: __init__.py  __main__.py
sepilot/a2a/: __init__.py  connector.py  exceptions.py  handoff.py  protocol.py  router.py
sepilot/agent/: __init__.py  agent_utils.py  approval_handler.py  backtracking.py  base_agent.py  bench_agent.py  context_manager.py  debate_node.py  enhanced_state.py  error_recovery.py  execution_context.py  file_detector.py  file_tracking.py  file_watcher.py  git_agent.py  hierarchical_planner.py  hooks.py  instructions_loader.py  k8s_agent.py  memory_bank.py  mode_manager.py  output_validator.py  pattern_nodes.py  pattern_orchestrator.py  permission_rules.py  plan_mode.py  progress_dashboard.py  recursion_detector.py  reflection_node.py  related_files.py  request_classifier.py  rules_loader.py  semantic_scorer.py  state_builder.py  state_helpers.py  symbol_context.py  task_executor.py  task_manager.py  task_registry.py  task_ui.py  (+5 more)
sepilot/cli/: __init__.py  lsp_entry.py  main.py
sepilot/commands/: __init__.py  manager.py
sepilot/config/: __init__.py  cli_agent_llm.py  config_loader.py  constants.py  llm_providers.py  model_profile.py  settings.py
sepilot/indexer/: __init__.py  call_graph.py  dependency_graph.py  indexer.py  models.py  storage.py  symbol_table.py
sepilot/loggers/: __init__.py  file_logger.py
sepilot/lsp/: __init__.py  (+4 more)
(+192 files in other folders)
